==> davewhiiite/uvc/firmware/uvc_controller/mbed-os/targets/TARGET_NUVOTON/TARGET_M2351/serial_api.c <==
#include "serial_api.h"
#include "cmsis.h"
#include "mbed_error.h"
#include "mbed_assert.h"
#include "PeripheralPins.h"
#include "nu_modutil.h"
#include "nu_bitutil.h"
#include <string.h>
#include <stdbool.h>
#include "dma_api.h"
#include "dma.h"

void serial_init(serial_t *obj, PinName tx, PinName rx)
{
    // NOTE: With armcc, serial_init() gets called from _sys_open() timing of which is before main()/mbed_sdk_init().
    mbed_sdk_init();

    // Determine which UART_x the pins are used for
    uint32_t uart_tx = pinmap_peripheral(tx, PinMap_UART_TX);
    uint32_t uart_rx = pinmap_peripheral(rx, PinMap_UART_RX);
    // Get the peripheral name (UART_x) from the pins and assign it to the object
    obj->serial.uart = (UARTName) pinmap_merge(uart_tx, uart_rx);
    MBED_ASSERT((int)obj->serial.uart != NC);

    const struct nu_modinit_s *modinit = get_modinit(obj->serial.uart, uart_modinit_tab);
    MBED_ASSERT(modinit != NULL);
    MBED_ASSERT(modinit->modname == (int) obj->serial.uart);

    struct nu_uart_var *var = (struct nu_uart_var *) modinit->var;

    obj->serial.pin_tx = tx;
    obj->serial.pin_rx = rx;
    obj->serial.pin_rts = NC;
    obj->serial.pin_cts = NC;

    pinmap_pinout(tx, PinMap_UART_TX);
    pinmap_pinout(rx, PinMap_UART_RX);

    if (! var->ref_cnt) {
        /* Select IP clock source
         *
         * NOTE: We must call secure version (from non-secure domain) because SYS/CLK regions are secure.
         */
        CLK_SetModuleClock_S(modinit->clkidx, modinit->clksrc, modinit->clkdiv);

        /* Enable IP clock
         *
         * NOTE: We must call secure version (from non-secure domain) because SYS/CLK regions are secure.
         */
        CLK_EnableModuleClock_S(modinit->clkidx);

        /* Reset module
         *
         * NOTE: We must call secure version (from non-secure domain) because SYS/CLK regions are secure.
         */
        SYS_ResetModule_S(modinit->rsetidx);

        // Configure baudrate
        int baudrate = 9600;
        if (obj->serial.uart == STDIO_UART) {
#if MBED_CONF_PLATFORM_STDIO_BAUD_RATE
            baudrate = MBED_CONF_PLATFORM_STDIO_BAUD_RATE;
#endif
        } else {
#if MBED_CONF_PLATFORM_DEFAULT_SERIAL_BAUD_RATE
            baudrate = MBED_CONF_PLATFORM_DEFAULT_SERIAL_BAUD_RATE;
#endif            
        }
        serial_baud(obj, baudrate);

        // Configure data bits, parity, and stop bits
        serial_format(obj, 8, ParityNone, 1);
    }
    var->ref_cnt ++;

    obj->serial.vec = var->vec;
    obj->serial.irq_en = 0;

#if DEVICE_SERIAL_ASYNCH
    obj->serial.dma_usage_tx = DMA_USAGE_NEVER;
    obj->serial.dma_usage_rx = DMA_USAGE_NEVER;
    obj->serial.event = 0;
    obj->serial.dma_chn_id_tx = DMA_ERROR_OUT_OF_CHANNELS;
    obj->serial.dma_chn_id_rx = DMA_ERROR_OUT_OF_CHANNELS;
#endif

    /* With support for checking H/W UART initialized or not, we allow serial_init(&stdio_uart)
     * calls in even though H/W UART 'STDIO_UART' has initialized. When serial_init(&stdio_uart)
     * calls in, we only need to set the 'stdio_uart_inited' flag. */
    if (((uintptr_t) obj) == ((uintptr_t) &stdio_uart)) {
        MBED_ASSERT(obj->serial.uart == STDIO_UART);
        stdio_uart_inited = 1;
    }

    if (var->ref_cnt) {
        // Mark this module to be inited.
        int i = modinit - uart_modinit_tab;
        uart_modinit_mask |= 1 << i;
    }
}

void serial_baud(serial_t *obj, int baudrate)
{
    // Flush Tx FIFO. Otherwise, output data may get lost on this change.
    while (! UART_IS_TX_EMPTY((UART_T *) NU_MODBASE(obj->serial.uart)));

    obj->serial.baudrate = baudrate;
    UART_Open((UART_T *) NU_MODBASE(obj->serial.uart), baudrate);
}

void serial_format(serial_t *obj, int data_bits, SerialParity parity, int stop_bits)
{
    // Flush Tx FIFO. Otherwise, output data may get lost on this change.
    while (! UART_IS_TX_EMPTY((UART_T *) NU_MODBASE(obj->serial.uart)));

    // Sanity check arguments
    MBED_ASSERT((data_bits == 5) || (data_bits == 6) || (data_bits == 7) || (data_bits == 8));
    MBED_ASSERT((parity == ParityNone) || (parity == ParityOdd) || (parity == ParityEven) || (parity == ParityForced1) || (parity == ParityForced0));
    MBED_ASSERT((stop_bits == 1) || (stop_bits == 2));

    obj->serial.databits = data_bits;
    obj->serial.parity = parity;
    obj->serial.stopbits = stop_bits;

    uint32_t databits_intern = (data_bits == 5) ? UART_WORD_LEN_5 :
                               (data_bits == 6) ? UART_WORD_LEN_6 :
                               (data_bits == 7) ? UART_WORD_LEN_7 :
                               UART_WORD_LEN_8;
    uint32_t parity_intern = (parity == ParityOdd || parity == ParityForced1) ? UART_PARITY_ODD :
                             (parity == ParityEven || parity == ParityForced0) ? UART_PARITY_EVEN :
                             UART_PARITY_NONE;
    uint32_t stopbits_intern = (stop_bits == 2) ? UART_STOP_BIT_2 : UART_STOP_BIT_1;
    UART_SetLineConfig((UART_T *) NU_MODBASE(obj->serial.uart),
                        0,  // Don't change baudrate
                        databits_intern,
                        parity_intern,
                        stopbits_intern);
}

void serial_set_flow_control(serial_t *obj, FlowControl type, PinName rxflow, PinName txflow)
{
    UART_T *uart_base = (UART_T *) NU_MODBASE(obj->serial.uart);

    // Free up old rts/cts pins when they are different from new ones
    if (obj->serial.pin_rts != rxflow) {
        gpio_set(obj->serial.pin_rts);
        obj->serial.pin_rts = rxflow;
    }
    if (obj->serial.pin_cts != txflow) {
        gpio_set(obj->serial.pin_cts);
        obj->serial.pin_cts = txflow;
    }

    if (rxflow != NC) {
        // Check if RTS pin matches.
        uint32_t uart_rts = pinmap_peripheral(rxflow, PinMap_UART_RTS);
        MBED_ASSERT(uart_rts == obj->serial.uart);
        // Enable the pin for RTS function
        pinmap_pinout(rxflow, PinMap_UART_RTS);

        // NOTE: Added in M480/M2351. Before configuring RTSACTLV, disable TX/RX.
        uart_base->FUNCSEL |= UART_FUNCSEL_TXRXDIS_Msk;
        while (uart_base->FIFOSTS & UART_FIFOSTS_TXRXACT_Msk);
        // nRTS pin output is low level active
        uart_base->MODEM |= UART_MODEM_RTSACTLV_Msk;
        // NOTE: Added in M480/M2351. After configuring RTSACTLV, re-enable TX/RX.
        uart_base->FUNCSEL &= ~UART_FUNCSEL_TXRXDIS_Msk;
        // Configure RTS trigger level to 8 bytes
        uart_base->FIFO = (uart_base->FIFO & ~UART_FIFO_RTSTRGLV_Msk) | UART_FIFO_RTSTRGLV_8BYTES;
        
        if (type == FlowControlRTS || type == FlowControlRTSCTS) {
            // Enable RTS
            uart_base->INTEN |= UART_INTEN_ATORTSEN_Msk;
        } else {
            // Disable RTS
            uart_base->INTEN &= ~UART_INTEN_ATORTSEN_Msk;
            /* Drive nRTS pin output to low-active. Allow the peer to be able to send data
             * even though its CTS is still enabled. */
            uart_base->MODEM &= ~UART_MODEM_RTS_Msk;
        }
    }

    /* If CTS is disabled, we don't need to configure CTS. But to be consistent with
     * RTS code above, we still configure CTS. */
    if (txflow != NC) {
        // Check if CTS pin matches.
        uint32_t uart_cts = pinmap_peripheral(txflow, PinMap_UART_CTS);
        MBED_ASSERT(uart_cts == obj->serial.uart);
        // Enable the pin for CTS function
        pinmap_pinout(txflow, PinMap_UART_CTS);

        // NOTE: Added in M480/M2351. Before configuring CTSACTLV, disable TX/RX.
        uart_base->FUNCSEL |= UART_FUNCSEL_TXRXDIS_Msk;
        while (uart_base->FIFOSTS & UART_FIFOSTS_TXRXACT_Msk);
        // nCTS pin input is low level active
        uart_base->MODEMSTS |= UART_MODEMSTS_CTSACTLV_Msk;
        // NOTE: Added in M480/M2351. After configuring CTSACTLV, re-enable TX/RX.
        uart_base->FUNCSEL &= ~UART_FUNCSEL_TXRXDIS_Msk;

        if (type == FlowControlCTS || type == FlowControlRTSCTS)  {
            // Enable CTS
            uart_base->INTEN |= UART_INTEN_ATOCTSEN_Msk;
        } else {
            // Disable CTS
            uart_base->INTEN &= ~UART_INTEN_ATOCTSEN_Msk;
        }
    }
}

void serial_irq_set(serial_t *obj, SerialIrq irq, uint32_t enable)
{
    obj->serial.irq_en = enable;
    serial_enable_interrupt(obj, irq, enable);
}

int serial_getc(serial_t *obj)
{
    // NOTE: Every byte access requires accompaniment of one interrupt. This has side effect of performance degradation.
    while (! serial_readable(obj));
    int c = UART_READ(((UART_T *) NU_MODBASE(obj->serial.uart)));

    // NOTE: On Nuvoton targets, no H/W IRQ to match TxIrq/RxIrq.
    //       Simulation of TxIrq/RxIrq requires the call to Serial::putc()/Serial::getc() respectively.
    if (obj->serial.inten_msk & (UART_INTEN_RDAIEN_Msk | UART_INTEN_RXTOIEN_Msk)) {
        UART_ENABLE_INT(((UART_T *) NU_MODBASE(obj->serial.uart)), (UART_INTEN_RDAIEN_Msk | UART_INTEN_RXTOIEN_Msk));
    }

    return c;
}

void serial_putc(serial_t *obj, int c)
{
    // NOTE: Every byte access requires accompaniment of one interrupt. This has side effect of performance degradation.
    while (! serial_writable(obj));
    UART_WRITE(((UART_T *) NU_MODBASE(obj->serial.uart)), c);

    // NOTE: On Nuvoton targets, no H/W IRQ to match TxIrq/RxIrq.
    //       Simulation of TxIrq/RxIrq requires the call to Serial::putc()/Serial::getc() respectively.
    if (obj->serial.inten_msk & UART_INTEN_THREIEN_Msk) {
        UART_ENABLE_INT(((UART_T *) NU_MODBASE(obj->serial.uart)), UART_INTEN_THREIEN_Msk);
    }
}

int serial_readable(serial_t *obj)
{
    return ! UART_GET_RX_EMPTY(((UART_T *) NU_MODBASE(obj->serial.uart)));
}

int serial_writable(serial_t *obj)
{
    return ! UART_IS_TX_FULL(((UART_T *) NU_MODBASE(obj->serial.uart)));
}

void serial_break_set(serial_t *obj)
{
    ((UART_T *) NU_MODBASE(obj->serial.uart))->LINE |= UART_LINE_BCB_Msk;
}

void serial_break_clear(serial_t *obj)
{
    ((UART_T *) NU_MODBASE(obj->serial.uart))->LINE &= ~UART_LINE_BCB_Msk;
}
